styles.css
@font-face {
    font-family: 'Norse Bold';
    src: url('fonts/Norse-Bold.otf') format('opentype');
}
:root {
    --text-color: black;
    --background-color-1: #f9fafb;
    --background-color-2: white;
    --shadow-1: rgb(180, 180, 180);
    --shadow-2: grey;
    --border-1: #E5E7EB;
    --border-2: 
}
html, body, main {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
}
main {
    display: flex;
    flex-direction: row;
}
.left_side {
    background-image: url("images/background.jpg");
    background-size: cover;
    width: 35%;
    height: 100%;
    min-height: 300px;
    position:static;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: fixed;
}
.banner {
    width: 100%;
    height: 20%;
    background-color: rgba(103, 103, 103, 0.5);
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 35%;
}
.odin_logo {
    position: relative;
    object-fit: cover;
    height: 15vmin;
    padding-right: 3%;
}
h1 {
    font-family: 'Norse Bold';
    font-size: 12vmin;
    margin: 0;
    color: white;
}
.credit > p {
    margin: 0;
    text-align: center;
}
.credit > p, .credit > p > a {
    font-size: max(1.5vw, 11px);
    font-weight: 500;
    color: white;
    text-shadow: -0.08vw 0.08vw 0 #000, 0.08vw 0.08vw 0 #000, 0.08vw -0.08vw 0 #000, -0.08vw -0.08vw 0 #000;
}
.credit {
    margin: 0 2% 4% 2%;
}
.right_side {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    width: 65%;
    padding-left: 35%;
}
.theme_button {
    appearance: none;
    border: 0;
    background-color: rgba(0, 0, 0, 0);
    position: absolute;
    top: 1.2vh;
    right: 1.2vh;
}
.theme_button > img {
    width: 5vh;
    height: 5vh;
    min-width: 20px;
    min-height: 20px;
}
.upper_text {
    min-height: 150px;
    background-color: var(--background-color-1);
}
.upper_text > p {
    font-weight: 700;
    font-size: max(14px, calc(1.2vh + 1.2vw));
    color: var(--text-color);
}
.upper_text > p:nth-child(2) {
    margin: 6.5vh 3vw 4vh 3vw;
}
.upper_text > p:last-child {
    margin: 0 3vw 4vh 3vw;
}
form > div {
    display: grid;
    grid-template-columns: repeat(2, 0fr);
    grid-template-rows: repeat(3, 0fr);
}
form {
    margin-bottom: 4vh;
}
legend {
    font-size: max(19px, calc(1.3vh + 1.3vw));
    margin: 3vh 0 1vh 4vw;
    width: 65%;
    color: var(--text-color);
}
label {
    font-size: max(12px, 2.2vh);
    padding-left: 0.3vw;
    color: var(--text-color);
}
input {
    appearance: none;
    min-width: 150px;
    min-height: 17px;
    max-width: 600px;
    border: 0.3vh solid var(--border-1);
    border-radius: max(1.5vh, 7px);
    outline: 0;
    padding: max(3px, 0.7vh) max(6px, 0.8vw);
    font-size: 3vh;
    background-color: var(--background-color-1);
    color: var(--text-color);
}
input:focus {
    border: 2px solid var(--border-2);
    box-shadow: 0 0 1vh var(--shadow-2);
}
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active  {
  transition: background-color 5000s;
  -webkit-text-fill-color: var(--text-color) !important;
}
.left_column {
    padding: 1.5vh 4vw;
}
.right_column {
    padding: 1.5vh 0;
}
.form_container {
    background-color: var(--background-color-2);
    position: relative;
    box-shadow: 0.2vw 1vh 1vh 0 var(--shadow-1);
    min-height: 230px;
}
.create_account {
    appearance: none;
    width: 20vw;
    height: 8vh;
    min-width: 175px;
    min-height: 45px;
    border-radius: max(1.5vh, 7px);
    background-color: #596d48;
    border: none;
    font-size: max(20px, calc(1.2vh + 1.2vw));
    color: white;
    margin: 3vh 0 0 max(17px, 4vw);
    padding: 0;
}
.form_container + div > p {
    font-size: max(14px, 2.7vh);
    margin: 3vh 0 0 4vw;
    font-weight: 500;
    color: var(--text-color);
}
.form_container + div > p > a {
    color: #596d48;
    font-weight: 500;
}
.right_side > div:last-child {
    background-color: var(--background-color-1);
    flex: 1 1 auto;
}   

